2.69 RC1: Symmetrize directions are all reverse #37058

Closed
opened 2013-10-12 21:17:55 +02:00 by Tilman Sommer · 4 comments

%%%--- Operating System, Graphics card ---
Win7 SP1 64bit, GTX580

- Blender version with error, and version that worked ---

error: 2.69 RC1, worked: 2.68a

- Short description of error ---

The symmetrize directions "+Z to -Z" etc. are working in reverse direction as they should.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. Load default cube scene and perform steps 1 to 4, or use attached blend file and skip step 4.
  2. Enter sculpt mode
  3. Enable dynamic topology
  4. Modify left top and bottom right corner of the cube somewhat by sculpting with the Brush.
  5. Select direction "+Z to -Z".
  6. Press Symmetrize button

> Result: bottom right corner of cube is mirrored from -Z to +Z instead of the top left corner.

It worked correctly as expected in 2.68a

%%%

%%%--- Operating System, Graphics card --- Win7 SP1 64bit, GTX580 - Blender version with error, and version that worked --- error: 2.69 RC1, worked: 2.68a - Short description of error --- The symmetrize directions "+Z to -Z" etc. are working in reverse direction as they should. - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1) Load default cube scene and perform steps 1 to 4, or use attached blend file and skip step 4. 2) Enter sculpt mode 3) Enable dynamic topology 4) Modify left top and bottom right corner of the cube somewhat by sculpting with the Brush. 5) Select direction "+Z to -Z". 6) Press Symmetrize button # > Result: bottom right corner of cube is mirrored from -Z to +Z instead of the top left corner. It worked correctly as expected in 2.68a %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%confirmed. it's reversed to all of them. It should be an easy fix, I'll look at it%%%

%%%confirmed. it's reversed to all of them. It should be an easy fix, I'll look at it%%%

%%%fixed on rev. 60724, thanks for the report.%%%

%%%fixed on rev. 60724, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37058
No description provided.