fix [#37058] 2.69 RC1: Symmetrize directions are all reverse